--- a/templates/base.html
+++ b/templates/base.html
@@ -28,5 +28,7 @@
     <script src="/static/js/materialize.min.js"></script>
     <!-- Your own JavaScript -->
     <script src="/static/js/scripts.js"></script>
+    <!-- Подключение библиотеки clipboard.js -->
+<script src="/static/js/clipboard.min.js"></script>
 </body>
 </html>
