fix delete and CRC32

--- a/templates/index.html
+++ b/templates/index.html
@@ -318,6 +318,7 @@
             <ul id="deleteItemsList">
                 <!-- List of items to be deleted will be dynamically added here -->
             </ul>
+            <input type="hidden" id="deleteCurrentPath" name="currentPath" value="{{.Path}}">
         </div>
         <div class="modal-footer">
             <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
