--- a/templates/index.html
+++ b/templates/index.html
@@ -137,6 +137,9 @@
                     Edit
                 </label>
             </div>
+            <button id="refreshMetadataButton" class="btn-floating btn-small waves-effect waves-light blue">
+                <i class="material-icons">refresh</i>
+            </button>
         </div>
         <div class="drawer-body">
             <div id="fileMetadataContent">
