--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,7 @@
 <footer class="page-footer">
-    <div class="footer-content">
-        <span>fileStation - Version {{.Version}}</span>
+    <div class="footer-wrapper">
+        <div class="footer-content">
+            <span>fileStation - Version {{.Version}}</span>
+        </div>
     </div>
 </footer>
