--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,7 +8,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    padding: 20px;
+    padding: 0; /* Remove padding to prevent extra space */
 }
 
 main {
@@ -239,11 +239,13 @@ th.resizable .resize-handle {
 }
 
 .container {
-    flex: 1;
     padding: 20px;
 }
 
-/* Footer */
+.content {
+    flex: 1; /* Make content area expand to fill available space */
+}
+
 .page-footer {
     background-color: #424242;
     color: white;
@@ -252,8 +254,6 @@ th.resizable .resize-handle {
     font-size: 14px;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
     width: 100%;
-    position: absolute;
-    bottom: 0;
 }
 
 .footer-wrapper {
