--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <!-- File table -->
-    <form id="fileForm" method="post">
+    <form id="fileForm" method="post" style="margin-bottom: 100px;">
         <input type="hidden" name="currentPath" value="{{.Path}}">
         <table id="fileTable" class="striped">
             <thead>
