--- a/templates/index.html
+++ b/templates/index.html
@@ -164,16 +164,20 @@
                         <input type="text" id="rdsCRC32" class="metadata-input">
                     </div>
                     <div class="metadata-field">
-                        <label for="rdsMD5">RDS MD5:</label>
-                        <input type="text" id="rdsMD5" class="metadata-input">
-                    </div>
-                    <div class="metadata-field">
                         <label for="rdsSHA1">RDS SHA1:</label>
                         <input type="text" id="rdsSHA1" class="metadata-input">
                     </div>
                     <div class="metadata-field">
                         <label for="rdsSHA256">RDS SHA256:</label>
                         <input type="text" id="rdsSHA256" class="metadata-input">
+                    </div>
+                    <div class="metadata-field">
+                        <label for="rdsCRC64">RDS CRC64:</label>
+                        <input type="text" id="rdsCRC64" class="metadata-input">
+                    </div>
+                    <div class="metadata-field">
+                        <label for="rdsBLAKE2sp">RDS BLAKE2sp:</label>
+                        <input type="text" id="rdsBLAKE2sp" class="metadata-input">
                     </div>
                 </div>
             
