--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {{ define "content" }}
-<div class="container">
+<div class="container-fluid">
     <!-- Breadcrumbs -->
     <nav class="breadcrumb-nav">
         <div class="nav-wrapper">
