add modal login

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,8 @@
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             document.body.style.display = 'block';
+            var modals = document.querySelectorAll('.modal');
+            M.Modal.init(modals);
         });
     </script>
 </body>
