--- a/templates/index.html
+++ b/templates/index.html
@@ -292,7 +292,7 @@
                 <input type="hidden" name="oldPath" id="renameOldPath">
                 <div class="input-field">
                     <input type="text" name="newName" id="newName" required>
-                    <label for="newName">New Name</label>
+                    <label for="newName" id="newNameLabel">New Name</label>
                 </div>
                 <button type="submit" class="modal-close btn blue">Rename</button>
             </form>
