fix delete button

--- a/templates/index.html
+++ b/templates/index.html
@@ -293,7 +293,7 @@
             </form>
         </div>
         <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
+            <a href="#!" class="modal-close btn red">Cancel</a>
         </div>
     </div>
 
@@ -311,7 +311,7 @@
             </form>
         </div>
         <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
+            <a href="#!" class="modal-close btn red">Cancel</a>
         </div>
     </div>
 
@@ -329,7 +329,7 @@
             </form>
         </div>
         <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
+            <a href="#!" class="modal-close btn red">Cancel</a>
         </div>
     </div>
 
@@ -363,7 +363,7 @@
             <p>Select the destination folder to move the selected items.</p>
         </div>
         <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
+            <a href="#!" class="modal-close btn red">Cancel</a>
         </div>
     </div>        
 
@@ -378,7 +378,7 @@
             <input type="hidden" id="deleteCurrentPath" name="currentPath" value="{{.Path}}">
         </div>
         <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
+            <a href="#!" class="modal-close btn red">Cancel</a>
             <button type="button" class="btn red" id="confirmDeleteButton">Delete</button>
         </div>
     </div>
