--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -550,3 +550,18 @@ th.resizable .resize-handle {
     padding: 20px;
     box-sizing: border-box;
 }
+
+.modal-footer .btn-flat {
+    color: #ff5252; /* Красный цвет для кнопок Cancel */
+    background-color: transparent; /* Прозрачный фон */
+    border: 1px solid #ff5252; /* Красная рамка */
+    border-radius: 4px; /* Закругленные углы */
+    padding: 0 2rem; /* Отступы */
+    text-transform: uppercase; /* Заглавные буквы */
+    transition: background-color 0.3s ease; /* Плавный переход фона */
+}
+
+.modal-footer .btn-flat:hover {
+    background-color: #ff5252; /* Красный фон при наведении */
+    color: white; /* Белый текст при наведении */
+}
